Crammed in a date labeler. The date.js might be overkill but we're using it for now. We don't really need the parsing; we need the formatting.

--- a/graph.html
+++ b/graph.html
@@ -4,6 +4,7 @@
   <script src="prototype.js"></script>
   <script src="graph.js"></script>
   <script src="mouse.js"></script>
+  <script src="Date.js"></script>
   <script src="load.js"></script>
 
   <style>
