Draws little circles as data points.

--- a/graph.html
+++ b/graph.html
@@ -8,7 +8,7 @@
   <script src="load.js"></script>
 
   <style>
-    body { text-align: center; }
+    body { text-align: center; background: black; }
     .graphContainer { margin: 0 auto; }
     #globalContainer { position: relative; margin: 90px auto 3em; width: 900px;  }
     </style>
