s/prototype/jquery/. Added mousemove listener.

--- a/graph.html
+++ b/graph.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 
 <head>
-  <script src="prototype.js"></script>
+  <script src="jquery.js"></script>
   <script src="graph.js"></script>
   <script src="mouse.js"></script>
   <script src="Date.js"></script>
   <script src="load.js"></script>
 
   <style>
-    body { text-align: center; background: black; }
+    body { text-align: center; background: black; color: #fff;}
     .graphContainer { margin: 0 auto; }
     #globalContainer { position: relative; margin: 90px auto 3em; width: 900px;  }
     </style>
@@ -17,6 +17,8 @@
 <body>
 
 <div id="globalContainer">
+
+  <div id="g1text"></div>
 
   <div class="graphContainer"><canvas id="graph1" width="800" height="500"></canvas></div>
 
