many old 2-3 year fixes to graph.js; precise purpose not identified.

--- a/graph.html
+++ b/graph.html
@@ -20,9 +20,9 @@
 
   <div id="g1text"></div>
 
-  <div class="graphContainer"><canvas id="graph1" width="800" height="500"></canvas></div>
+  <div class="graphContainer firstContainer"></div>
 
-  <div class="graphContainer"><canvas id="graph2" width="800" height="500"></canvas></div>
+  <div class="graphContainer secondContainer"><canvas id="graph2" width="800" height="500"></canvas></div>
 </div>
 
 </body>
